@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0104
+// generated by Fast Light User Interface Designer (fluid) version 1.0106
 
 #ifndef widget_panel_h
 #define widget_panel_h
@@ -21,9 +21,13 @@ extern void align_cb(Fl_Button*, void*);
 #include <FL/Fl_Box.H>
 #include <FL/Fl_Value_Input.H>
 extern void x_cb(Fl_Value_Input*, void*);
+extern Fl_Value_Input *widget_x_input;
 extern void y_cb(Fl_Value_Input*, void*);
+extern Fl_Value_Input *widget_y_input;
 extern void w_cb(Fl_Value_Input*, void*);
+extern Fl_Value_Input *widget_w_input;
 extern void h_cb(Fl_Value_Input*, void*);
+extern Fl_Value_Input *widget_h_input;
 extern void slider_size_cb(Fl_Value_Input*, void*);
 extern void min_cb(Fl_Value_Input*, void*);
 extern void max_cb(Fl_Value_Input*, void*);
